--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,12 +37,12 @@ body {
 }
 
 /* Dark mode settings (optional, but properly structured) */
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 .slick-slide div{
   margin: 0 10px;
