--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,10 +49,10 @@ body {
 }
 
 .product-card:hover .product-head{
-  color: orangered;
+  color: #9e0000;
 }
 .product-card:hover .product-icon{
-  color: orangered;
+  color: #9e0000;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 .custom-scrollbar::-webkit-scrollbar {
